--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -3,13 +3,22 @@
       package="info.tatsu.android.wakelock_tile"
       android:versionCode="1"
       android:versionName="1.0">
-    <application android:label="@string/app_name" android:icon="@drawable/ic_launcher">
-        <activity android:name="MainActivity"
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <application android:label="@string/app_name"
+                 android:icon="@mipmap/ic_launcher">
+        <activity android:name=".MainActivity"
                   android:label="@string/app_name">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
+                <action android:name="android.service.quicksettings.action.QS_TILE_PREFERENCES" />
             </intent-filter>
         </activity>
+        <service android:name=".WakelockQSTileService"
+                 android:label="@string/qstile_name"
+                 android:icon="@drawable/wakelock"
+                 android:permission="android.permission.BIND_QUICK_SETTINGS_TILE">
+            <intent-filter>
+                <action android:name="android.service.quicksettings.action.QS_TILE" />
+            </intent-filter>
+        </service>
     </application>
 </manifest>
