--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -5,9 +5,12 @@
       android:versionName="1.0">
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <application android:label="@string/app_name"
-                 android:icon="@mipmap/ic_launcher">
+                 android:icon="@mipmap/ic_launcher"
+                 android:theme="@style/AppTheme"
+                 android:allowBackup="false">
         <activity android:name=".MainActivity"
-                  android:label="@string/app_name">
+                  android:label="@string/app_name"
+                  android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.service.quicksettings.action.QS_TILE_PREFERENCES" />
             </intent-filter>
