--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -4,7 +4,8 @@
       android:versionCode="1"
       android:versionName="1.0">
     <uses-permission android:name="android.permission.WAKE_LOCK" />
-    <application android:label="@string/app_name"
+    <application android:name=".App"
+                 android:label="@string/app_name"
                  android:icon="@mipmap/ic_launcher"
                  android:theme="@style/AppTheme"
                  android:allowBackup="false">
