--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,9 @@
 task wrapper(type: Wrapper) {
-    gradleVersion = '3.3'
+    gradleVersion = '4.0.1'
 }
 
 buildscript {
-    ext.kotlin_version = '1.1.3'
+    ext.kotlin_version = '1.1.3-2'
     repositories {
         maven {
             url 'https://maven.google.com'
